syntax = "proto3";

package types;

import "mars/mars.proto";
import "websocket/websocket.proto";

option go_package = "github.com/duc-cnzj/mars/api/v5/types;types";

enum EventActionType {
  Unknown      = 0;
  Create       = 1;
  Update       = 2;
  Delete       = 3;
  Upload       = 4;
  Download     = 5;
  DryRun       = 6;
  // websocket 执行命令
  Shell        = 7;
  Login        = 8;
  CancelDeploy = 9;
  // SDK 执行命令
  Exec         = 10;
}


message Pod {
  string namespace = 1;
  string pod       = 2;
}

message StateContainer {
  string namespace   = 1;
  string pod         = 2;
  string container   = 3;
  // 在滚动更新的时候会出现新旧 pod，is_old 用来标识旧的即将被删除的 pod
  bool   is_old      = 4;
  bool   terminating = 5;
  bool   pending     = 6;
  bool   ready       = 7;
}

message ServiceEndpoint {
  string name      = 1;
  string url       = 2;
  string port_name = 3;
}

message ChangelogModel {
  int32                         id                 = 1;
  int32                         version            = 2;
  string                        username           = 3;
  repeated string               manifest           = 4;
  string                        config             = 5;
  bool                          config_changed     = 6;
  int64                         project_id         = 7;
  int64                         git_project_id     = 8;

  ProjectModel                  project            = 9;
  GitProjectModel               git_project        = 10;
  string                        date               = 11;

  string                        config_type        = 12;
  string                        git_branch         = 13;
  string                        git_commit         = 14;
  string                        docker_image       = 15;
  repeated KeyValue             env_values         = 16;
  repeated websocket.ExtraValue extra_values       = 17;
  repeated websocket.ExtraValue final_extra_values = 18;
  string                        git_commit_web_url = 19;
  string                        git_commit_title   = 20;
  string                        git_commit_author  = 21;
  string                        git_commit_date    = 22;

  string                        created_at         = 100;
  string                        updated_at         = 101;
  string                        deleted_at         = 102;
}

message EventModel {
  int32           id         = 1;
  EventActionType action     = 2;
  string          username   = 3;
  string          message    = 4;
  string          old        = 5;
  string          new        = 6;
  string          duration   = 7;
  int32           file_id    = 8;

  FileModel       file       = 9;
  string          event_at   = 10;
  bool            has_diff   = 11;

  string          created_at = 100;
  string          updated_at = 101;
  string          deleted_at = 102;
}

message FileModel {
  int32  id             = 1;
  string path           = 2;
  int32  size           = 3;
  string username       = 4;
  string namespace      = 5;
  string pod            = 6;
  string container      = 7;
  string container_Path = 8;

  string humanize_size  = 9;

  string created_at     = 100;
  string updated_at     = 101;
  string deleted_at     = 102;
}

message GitProjectModel {
  int32       id             = 1;
  string      default_branch = 2;
  string      name           = 3;
  int32       git_project_id = 4;
  bool        enabled        = 5;
  bool        global_enabled = 6;
  mars.Config global_config  = 7;

  string      created_at     = 100;
  string      updated_at     = 101;
  string      deleted_at     = 102;
}

message ImagePullSecret {
  string name = 1;
}

message MemberModel {
  int32  id    = 1;
  string email = 2;
}

message NamespaceModel {
  int32                 id            = 1;
  string                name          = 2;
  repeated ProjectModel projects      = 3;
  bool                  favorite      = 4;
  string                description   = 5;
  repeated MemberModel  members       = 6;
  bool                  private       = 7;
  string                creator_email = 8;

  string                created_at    = 100;
  string                updated_at    = 101;
  string                deleted_at    = 102;
}

enum Deploy {
  StatusUnknown   = 0;
  StatusDeploying = 1;
  StatusDeployed  = 2;
  StatusFailed    = 3;
}

message KeyValue {
  string key   = 1;
  string value = 2;
}

message ProjectModel {
  int32                         id                  = 1;
  string                        name                = 2;
  int32                         git_project_id      = 3;
  string                        git_branch          = 4;
  string                        git_commit          = 5;
  string                        config              = 6;
  string                        override_values     = 7;
  repeated string               docker_image        = 8;
  repeated string               pod_selectors       = 9;
  int32                         namespace_id        = 10;
  bool                          atomic              = 11;
  repeated KeyValue             env_values          = 12;
  repeated websocket.ExtraValue extra_values        = 13;
  repeated websocket.ExtraValue final_extra_values  = 14;
  Deploy                        deploy_status       = 15;
  string                        humanize_created_at = 16;
  string                        humanize_updated_at = 17;

  string                        config_type         = 18;
  string                        git_commit_web_url  = 19;
  string                        git_commit_title    = 20;
  string                        git_commit_author   = 21;
  string                        git_commit_date     = 22;
  int32                         version             = 23;
  int32                         repo_id             = 24;
  RepoModel                     repo                = 25;

  NamespaceModel                namespace           = 50;

  string                        created_at          = 100;
  string                        updated_at          = 101;
  string                        deleted_at          = 102;
}

message AccessTokenModel {
  string token        = 1;
  string email        = 2;
  string expired_at   = 3;
  string usage        = 4;
  string last_used_at = 5;
  bool   is_deleted   = 6;
  bool   is_expired   = 7;

  string created_at   = 100;
  string updated_at   = 101;
  string deleted_at   = 102;
}

message RepoModel {
  int32       id               = 1;
  string      name             = 2;
  int32       git_project_id   = 3;
  string      git_project_name = 4;
  bool        enabled          = 5;
  mars.Config mars_config      = 6;
  bool        need_git_repo    = 7;
  string      description      = 8;

  string      created_at       = 100;
  string      updated_at       = 101;
  string      deleted_at       = 102;
}